Revert CSS modal dialog overflow decision. Fixes #120.

--- a/app/assets/stylesheets/bootstrap-overrides.css
+++ b/app/assets/stylesheets/bootstrap-overrides.css
@@ -28,7 +28,3 @@
   color: #EFEFEF;
   background-color: #183C68;
 }
-
-.modal .modal-body {
-  overflow-y: visible;
-}
